cmake_minimum_required(VERSION 3.16)
project(cpp_learn)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp_learn 46_多态应用_制作饮品/46_多态应用_制作饮品.cpp 47_虚析构和纯虚析构/47_虚析构和纯虚析构.cpp 48_多态应用_电脑组装案例/48_多态应用_电脑组装案例.cpp 49_文件操作之写文件/49_文件操作之写文件.cpp 50_文件操作之读文件/50_文件操作之读文件.cpp 51_二进制写文件/51_二进制写文件.cpp 52_二进制读文件/52_二进制读文件.cpp)